--- a/2022-03-13_VerificationWork/MainWindow.xaml
+++ b/2022-03-13_VerificationWork/MainWindow.xaml
@@ -5,54 +5,64 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2022_03_13_VerificationWork"
         mc:Ignorable="d"
-        Title="MainWindow" Height="540" Width="1365">
+        Title="MainWindow" Height="540" Width="1239" Activated="Window_Activated">
     <Grid>
-        <ComboBox x:Name="professionComboBox" HorizontalAlignment="Left" Margin="140,80,0,0" VerticalAlignment="Top" Width="200" FontSize="24" SelectedIndex="0">
+        <GroupBox x:Name="characterInfo" HorizontalAlignment="Left" Height="451" Header="Character Info:" Margin="6,10,0,0" VerticalAlignment="Top" Width="255" FontSize="24"/>
+        <ComboBox x:Name="professionComboBox" HorizontalAlignment="Left" Margin="26,184,0,0" VerticalAlignment="Top" Width="200" FontSize="24" SelectionChanged="professionComboBox_SelectionChanged">
             <ListBoxItem Content="Warrior"/>
             <ListBoxItem Content="Archer"/>
             <ListBoxItem Content="Wizard"/>
         </ComboBox>
-        <Label x:Name="professionLabel" Content="Profession:" HorizontalAlignment="Left" Margin="10,78,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <TextBox x:Name="nameTextBox" HorizontalAlignment="Left" Margin="134,35,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="200" FontSize="24" GotFocus="nameTextBox_GotFocus" LostFocus="nameTextBox_LostFocus"/>
-        <Label x:Name="nameLabel" Content="Name:" HorizontalAlignment="Left" Margin="33,31,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Button x:Name="createButton" Content="CREATE" HorizontalAlignment="Left" Margin="36,141,0,0" VerticalAlignment="Top" FontSize="24" Width="99" Click="createButton_Click"/>
-        <GroupBox x:Name="mainStatGroupBox" HorizontalAlignment="Left" Height="451" Header="Main Stats:" Margin="363,10,0,0" VerticalAlignment="Top" Width="359" FontSize="24"/>
-        <GroupBox x:Name="additionalStatGroupBox" HorizontalAlignment="Left" Height="451" Header="Additional Stats:" Margin="744,10,0,0" VerticalAlignment="Top" Width="400" FontSize="24"/>
-        <Label x:Name="strLabel" Content="Strenght:" HorizontalAlignment="Left" Margin="382,52,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="agltLabel" Content="Agility:" HorizontalAlignment="Left" Margin="382,99,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="intLabel" Content="Intelligence:" HorizontalAlignment="Left" Margin="382,146,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="freePointLabel" Content="Free point:" HorizontalAlignment="Left" Margin="432,312,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="strAmountLabel" Content="10" HorizontalAlignment="Left" Margin="612,48,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="agltAmountLabel" Content="10" HorizontalAlignment="Left" Margin="612,96,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="intAmountLabel" Content="10" HorizontalAlignment="Left" Margin="612,142,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="freePointAmountLabel" Content="10" HorizontalAlignment="Left" Margin="609,312,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Button x:Name="strAddBtn" Content="+" HorizontalAlignment="Center" Margin="0,44,0,0" VerticalAlignment="Top" FontSize="24" Width="42" Height="42" Click="strAddBtn_Click"/>
-        <Button x:Name="agltAddBtn" Content="+" HorizontalAlignment="Center" Margin="0,96,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="agltAddBtn_Click"/>
-        <Button x:Name="intAddBtn" Content="+" HorizontalAlignment="Center" Margin="0,144,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="intAddBtn_Click"/>
-        <Border BorderBrush="Black" BorderThickness="1" Margin="370,295,649,153"/>
-        <Label x:Name="physicalDamageLabel" Content="PhysicalDamage:" HorizontalAlignment="Left" Margin="767,54,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="physicalDefenseLabel" Content="PhysicalDefense:" HorizontalAlignment="Left" Margin="767,101,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="magicalDamageLabel" Content="MagicalDamage:" HorizontalAlignment="Left" Margin="767,148,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="physicalDamageAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,54,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="physicalDefenseAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,101,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="magicalDamageAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,148,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="magicalDefenseLabel" Content="MagicalDefense:" HorizontalAlignment="Left" Margin="767,195,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="healthLabel" Content="Health:" HorizontalAlignment="Left" Margin="767,0,0,0" VerticalAlignment="Center" FontSize="24"/>
-        <Label x:Name="manaLabel" Content="Mana:" HorizontalAlignment="Left" Margin="767,289,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="magicalDefenseAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,195,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="healthAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,0,0,0" VerticalAlignment="Center" FontSize="24"/>
-        <Label x:Name="manaAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,289,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="levelLabel" Content="Level:" HorizontalAlignment="Left" Margin="767,329,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="experienseLabel" Content="Experiense:" HorizontalAlignment="Left" Margin="767,377,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="levelAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,329,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="experienseAmountLabel" Content="0" HorizontalAlignment="Left" Margin="1023,377,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="stmnLabel" Content="Stamina:" HorizontalAlignment="Left" Margin="382,195,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label x:Name="stmnAmountLabel" Content="10" HorizontalAlignment="Left" Margin="612,192,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Button x:Name="stmnAddBtn" Content="+" HorizontalAlignment="Center" Margin="0,194,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="stmnAddBtn_Click"/>
-        <Button x:Name="strRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="560,44,0,0" VerticalAlignment="Top" FontSize="24" Width="42" Height="42" Click="strRemoveBtn_Click"/>
-        <Button x:Name="agltRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="560,96,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="agltRemoveBtn_Click"/>
-        <Button x:Name="intRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="560,144,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="intRemoveBtn_Click"/>
-        <Button x:Name="stmnRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="560,194,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="stmnRemoveBtn_Click"/>
+        <Label x:Name="professionLabel" Content="Profession:" HorizontalAlignment="Left" Margin="23,138,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <TextBox x:Name="nameTextBox" HorizontalAlignment="Left" Margin="23,98,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="200" FontSize="24" GotFocus="nameTextBox_GotFocus" LostFocus="nameTextBox_LostFocus" HorizontalContentAlignment="Right"/>
+        <Label x:Name="nameLabel" Content="Name:" HorizontalAlignment="Left" Margin="23,54,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Button x:Name="createButton" Content="CREATE" HorizontalAlignment="Left" Margin="27,241,0,0" VerticalAlignment="Top" FontSize="24" Width="196" Click="createButton_Click"/>
+        <GroupBox x:Name="mainStatGroupBox" HorizontalAlignment="Left" Height="505" Header="Main Stats:" Margin="266,19,0,0" VerticalAlignment="Top" Width="279" FontSize="24"/>
+        <GroupBox x:Name="additionalStatGroupBox" HorizontalAlignment="Left" Height="451" Header="Additional Stats:" Margin="567,20,0,0" VerticalAlignment="Top" Width="320" FontSize="24"/>
+        <Label x:Name="strLabel" Content="Strenght:" HorizontalAlignment="Left" Margin="337,54,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="agltLabel" Content="Agility:" HorizontalAlignment="Left" Margin="346,151,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="intLabel" Content="Intelligence:" HorizontalAlignment="Left" Margin="327,239,0,0" VerticalAlignment="Top" FontSize="24"/>
+
+        <Label x:Name="strAmountLabel" Content="10" HorizontalAlignment="Left" Margin="378,107,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="agltAmountLabel" Content="10" HorizontalAlignment="Left" Margin="378,199,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="intAmountLabel" Content="10" HorizontalAlignment="Left" Margin="378,286,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Border BorderBrush="Black" BorderThickness="1" Margin="285,430,0,0" HorizontalAlignment="Left" Width="214" Height="42" VerticalAlignment="Top"/>
+        <Label x:Name="freePointLabel" Content="Free point:" HorizontalAlignment="Left" Margin="311,430,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="freePointAmountLabel" Content="10" HorizontalAlignment="Left" Margin="439,430,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Button x:Name="strAddBtn" Content="+" HorizontalAlignment="Left" Margin="428,101,0,0" VerticalAlignment="Top" FontSize="24" Width="42" Height="42" Click="strAddBtn_Click"/>
+        <Button x:Name="agltAddBtn" Content="+" HorizontalAlignment="Left" Margin="428,197,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="agltAddBtn_Click"/>
+        <Button x:Name="intAddBtn" Content="+" HorizontalAlignment="Left" Margin="428,286,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="intAddBtn_Click"/>
+
+        <Label x:Name="physicalDamageLabel" Content="PhysicalDamage:" HorizontalAlignment="Left" Margin="590,64,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="physicalDefenseLabel" Content="PhysicalDefense:" HorizontalAlignment="Left" Margin="590,111,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="magicalDamageLabel" Content="MagicalDamage:" HorizontalAlignment="Left" Margin="590,158,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="physicalDamageAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,64,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="physicalDefenseAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,111,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="magicalDamageAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,158,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="magicalDefenseLabel" Content="MagicalDefense:" HorizontalAlignment="Left" Margin="590,205,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="healthLabel" Content="Health:" HorizontalAlignment="Left" Margin="590,251,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="manaLabel" Content="Mana:" HorizontalAlignment="Left" Margin="590,299,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="magicalDefenseAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,205,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="healthAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,251,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="manaAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,299,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="levelLabel" Content="Level:" HorizontalAlignment="Left" Margin="590,339,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="experienseLabel" Content="Experiense:" HorizontalAlignment="Left" Margin="590,387,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="levelAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,339,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="experienseAmountLabel" Content="0" HorizontalAlignment="Left" Margin="846,387,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="stmnLabel" Content="Stamina:" HorizontalAlignment="Left" Margin="346,324,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="stmnAmountLabel" Content="10" HorizontalAlignment="Left" Margin="378,366,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Button x:Name="stmnAddBtn" Content="+" HorizontalAlignment="Left" Margin="428,366,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="stmnAddBtn_Click"/>
+        <Button x:Name="strRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="304,101,0,0" VerticalAlignment="Top" FontSize="24" Width="42" Height="42" Click="strRemoveBtn_Click"/>
+        <Button x:Name="agltRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="305,197,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="agltRemoveBtn_Click"/>
+        <Button x:Name="intRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="305,286,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="intRemoveBtn_Click"/>
+        <Button x:Name="stmnRemoveBtn" Content="-" HorizontalAlignment="Left" Margin="305,366,0,0" VerticalAlignment="Top" FontSize="20" Width="42" Height="42" Click="stmnRemoveBtn_Click"/>
+        <GroupBox Header="Character List:" Margin="918,10,0,0" FontSize="24" HorizontalAlignment="Left" Width="283" Height="461" VerticalAlignment="Top"/>
+        <ListBox x:Name="characterList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="954,55,0,0" FontSize="24" HorizontalAlignment="Left" Width="212" Height="290" VerticalAlignment="Top"/>
+
+        <Button x:Name="updateBtn" Content="Update" HorizontalAlignment="Left" Height="48" Margin="954,363,0,0" VerticalAlignment="Top" Width="97" FontSize="24"/>
+        <Button x:Name="removeBtn" Content="Remove" HorizontalAlignment="Left" Height="48" Margin="1069,363,0,0" VerticalAlignment="Top" Width="97" FontSize="24"/>
+        <Button x:Name="updateListBtn" Content="Update List" HorizontalAlignment="Left" Height="38" Margin="954,423,0,0" VerticalAlignment="Top" Width="212" FontSize="24" Click="updateListBtn_Click"/>
+
 
     </Grid>
 </Window>
